# square-semantic-analytics

./: .exampleenv  .pre-commit-config.yaml  CHANGELOG.md  README.md  app.py  authenticate.py  pyproject.toml  requirements.in  requirements.txt  test.py  testing.py
config/: db.py
models/: applied_discounts.py  applied_taxes.py  cursor.py  discounts.py  line_items.py  modifiers.py  orders.py  payments.py  taxes.py  tenders.py
processors/: orders_processors.py
source_endpoints/: customers_pagenation.py  get_orders.py  list_payments.py  orders.py  search_orders.py
source_endpoints/config/: orders.yml  payments.yml
utils/: cursor_manager.py  write_manager.py
